--- a/roles/haproxy/templates/haproxy.cfg.j2
+++ b/roles/haproxy/templates/haproxy.cfg.j2
@@ -30,10 +30,7 @@ defaults
     maxconn                 3000
 
 backend app
-    {% for host in groups.lbservers %}
-    listen {{ daemonname }} 0.0.0.0:{{ listenport }}
-    {% endfor %}
     balance     {{ balance }}
     {% for host in groups.webservers %}
-        server {{ host }} {{ hostvars[inventory_hostname]['ansible_' + iface].ipv4.address }}:{{ httpd_port }}
+        server {{ host }} {{ host }}:{{ httpd_port }}
     {% endfor %}
