--- a/roles/provisioning/templates/dhcpcd.conf.j2
+++ b/roles/provisioning/templates/dhcpcd.conf.j2
@@ -6,10 +6,10 @@
 #static routers={{ pizeros_ip_gateway }}
 #static domain_name_servers={{ dns_nameservers | join(' ') }}
 
-interface wlan0
-static ip_address={{ pizeros_ip_address }}/24
-static routers={{ pizeros_ip_gateway }}
-static domain_name_servers={{ dns_nameservers | join(' ') }}
+#interface wlan0
+#static ip_address={{ pizeros_ip_address }}/24
+#static routers={{ pizeros_ip_gateway }}
+#static domain_name_servers={{ dns_nameservers | join(' ') }}
 
 # Allow users of this group to interact with dhcpcd via the control socket.
 #controlgroup wheel
